force-app/main/default/objects/JSON_to_Field_Mapping__mdt/JSON_to_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata type is used by JSONStringValueToFieldValueUtility, and defines the JSON key values, and what sObject fields they map to.</description>
    <label>JSON to Field Mapping</label>
    <pluralLabel>JSON to Field Mappings</pluralLabel>
</CustomObject>