force-app/main/default/objects/JSON_to_Field_Mapping__mdt/fields/JSON_Key__c.field-meta.xml
<CustomField>
    <fullName>JSON_Key__c</fullName>
    <description>The Key Value in the JSON string</description>
    <label>JSON Key</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>