force-app/main/default/objects/JSON_to_Field_Mapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>JSON_to_Field_Mappings</relationshipLabel>
    <relationshipName>JSON_to_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>