force-app/main/default/objects/JSON_to_Field_Mapping__mdt/fields/sObject_Field__c.field-meta.xml
<CustomField>
    <fullName>sObject_Field__c</fullName>
    <description>The API Name of the sObject Field that the JSON value will be stored in. Note: This is case sensitive, E.g Name and name are two values.</description>
    <inlineHelpText>The API Name of the sObject Field that the JSON value will be stored in. Note: This is case sensitive, E.g Name and name are two values.</inlineHelpText>
    <label>sObject Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>